adding author info

--- a/11_d3/circles.html
+++ b/11_d3/circles.html
@@ -8,6 +8,8 @@
 <body>
 <script type='text/javascript'>
 
+    // author: Jason Dolatshahi
+
     // svg parameters
     var svg_w = 500,
         svg_h = 50;
