--- a/11_d3/iris.html
+++ b/11_d3/iris.html
@@ -23,6 +23,8 @@ body {
 </script>
 <script>
 
+// author: Jason Dolatshahi
+
 var margin = {top: 20, right: 20, bottom: 30, left: 40},
     width = 960 - margin.left - margin.right,
     height = 500 - margin.top - margin.bottom;
