handful of updates

--- a/11_d3/circles.html
+++ b/11_d3/circles.html
@@ -9,6 +9,7 @@
 <script type='text/javascript'>
 
     // author: Jason Dolatshahi
+    // adapted from http://alignedleft.com/content/03-tutorials/01-d3/110-drawing-svgs/3.html
 
     // svg parameters
     var svg_w = 500,
