--- a/11_d3/iris.html
+++ b/11_d3/iris.html
@@ -24,6 +24,7 @@ body {
 <script>
 
 // author: Jason Dolatshahi
+// adapted from: https://gist.github.com/mbostock/3887118
 
 var margin = {top: 20, right: 20, bottom: 30, left: 40},
     width = 960 - margin.left - margin.right,
